--- a/styles/flower-shop.css
+++ b/styles/flower-shop.css
@@ -68,6 +68,8 @@ main section{
     font-weight: 400;
     width: 50%;
     margin: auto;
+    margin-bottom: 20px;
+
     
 }
 .flower-img-container{
@@ -83,4 +85,40 @@ main section{
 .flower-img{
     /* width: 200px; */
     /* height: 350px; */
+}
+.sale-up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:rgba(229, 84, 115, 0.05);
+    text-align: center;
+    gap: 190px;
+    width: 100%;
+    /* margin: auto; */
+    height: 500px;
+}
+.sale-title{
+    color: #272727;
+
+font-size: 30px;
+
+font-weight: 600;
+
+}
+.sale-descripion{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+margin-bottom: 30px;
+font-size: 18px;
+margin-top: 10px;
+font-weight: 400;
+
+}
+.text-primary{
+    color:#E55473 ;
+}
+.flower-imgs{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
 }
