--- a/styles/flower-shop.css
+++ b/styles/flower-shop.css
@@ -122,3 +122,34 @@ font-weight: 400;
     justify-content: center;
     gap: 25px;
 }
+.deals{
+    background-image: url('../images/Rectangle\ 9.png');
+    background: no-repeat;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+    background-color: black;
+}
